--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"format": "prettier --cache --write '*.{js,jsx,ts,tsx,md,mdx}'",
-		"prepare": "husky"
+		"prepare": "husky && panda codegen"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx,md,mdx}": [
@@ -21,6 +21,7 @@
 		"react-dom": "^18"
 	},
 	"devDependencies": {
+		"@pandacss/dev": "^0.39.1",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
@@ -33,8 +34,6 @@
 		"lint-staged": "^15.2.2",
 		"postcss": "^8",
 		"prettier": "^3.2.5",
-		"prettier-plugin-tailwindcss": "^0.5.14",
-		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
 	}
 }
