--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
 		"next/core-web-vitals",
 		"prettier",
 		"plugin:@typescript-eslint/recommended",
-		"plugin:@typescript-eslint/recommended-requiring-type-checking"
+		"plugin:@typescript-eslint/recommended-requiring-type-checking",
+		"plugin:@pandacss/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
