--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"devDependencies": {
 		"@pandacss/dev": "^0.39.1",
+		"@pandacss/eslint-plugin": "^0.1.4",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
