--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"eslint": "^8",
 		"eslint-config-next": "14.2.3",
 		"eslint-config-prettier": "^9.1.0",
+		"gray-matter": "^4.0.3",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"postcss": "^8",
