--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
 	"dependencies": {
 		"next": "14.2.3",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-markdown": "^9.0.1",
+		"rehype-raw": "^7.0.0",
+		"remark-gfm": "^4.0.0"
 	},
 	"devDependencies": {
 		"@pandacss/dev": "^0.39.1",
@@ -37,6 +40,7 @@
 		"lint-staged": "^15.2.2",
 		"postcss": "^8",
 		"prettier": "^3.2.5",
+		"shiki": "^1.6.1",
 		"typescript": "^5"
 	}
 }
