--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
 		]
 	},
 	"dependencies": {
+		"@mdx-js/loader": "^3.0.1",
+		"@mdx-js/react": "^3.0.1",
+		"@next/mdx": "^14.2.3",
 		"next": "14.2.3",
+		"next-mdx-remote": "^5.0.0",
 		"react": "^18",
 		"react-dom": "^18"
 	},
 	"devDependencies": {
 		"@pandacss/dev": "^0.39.1",
 		"@pandacss/eslint-plugin": "^0.1.4",
+		"@types/mdx": "^2.0.13",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
