--- a/package.json
+++ b/package.json
@@ -17,18 +17,16 @@
 		]
 	},
 	"dependencies": {
-		"@mdx-js/loader": "^3.0.1",
-		"@mdx-js/react": "^3.0.1",
-		"@next/mdx": "^14.2.3",
 		"next": "14.2.3",
 		"next-mdx-remote": "^5.0.0",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"rehype-pretty-code": "^0.13.2",
+		"remark-gfm": "^4.0.0"
 	},
 	"devDependencies": {
 		"@pandacss/dev": "^0.39.1",
 		"@pandacss/eslint-plugin": "^0.1.4",
-		"@types/mdx": "^2.0.13",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
@@ -42,6 +40,7 @@
 		"lint-staged": "^15.2.2",
 		"postcss": "^8",
 		"prettier": "^3.2.5",
+		"shiki": "^1.6.2",
 		"typescript": "^5"
 	}
 }
