--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
 		"next-mdx-remote": "^5.0.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-external-links": "^3.0.0",
 		"rehype-pretty-code": "^0.13.2",
+		"rehype-slug": "^6.0.0",
+		"remark-breaks": "^4.0.0",
 		"remark-gfm": "^4.0.0"
 	},
 	"devDependencies": {
