--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"rehype-external-links": "^3.0.0",
 		"rehype-pretty-code": "^0.13.2",
 		"rehype-slug": "^6.0.0",
-		"remark-breaks": "^4.0.0",
-		"remark-gfm": "^4.0.0"
+		"remark-gfm": "^4.0.0",
+		"remark-unwrap-images": "^4.0.0"
 	},
 	"devDependencies": {
 		"@pandacss/dev": "^0.39.1",
