--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"next": "14.2.3",
 		"next-mdx-remote": "^5.0.0",
+		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"rehype-autolink-headings": "^7.1.0",
