--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		]
 	},
 	"dependencies": {
+		"@next/third-parties": "^14.2.5",
 		"next": "14.2.3",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.3.0",
